--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,3 +12,20 @@
 html {
   scroll-behavior: smooth;
 }
+
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+
+*::-webkit-scrollbar-track {
+  background: #272626;
+}
+
+/* Handle */
+*::-webkit-scrollbar-thumb {
+  background: #7e7d7d;
+
+  color: #3f3f3f10;
+}
